--- a/LoanCalculator/LoanCalculator.Application.Web/Web.config
+++ b/LoanCalculator/LoanCalculator.Application.Web/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="loanDBEntities" connectionString="data source=JUSTIN-LAPTOP;initial catalog=loanDB;persist security info=False;user id=sa;password=Password1;packet size=4096" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
