--- a/LoanCalculator/LoanCalculator.DataAccessLayer/LoanCalculator.DataAccessLayer.csproj
+++ b/LoanCalculator/LoanCalculator.DataAccessLayer/LoanCalculator.DataAccessLayer.csproj
@@ -51,14 +51,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EFContext\loanDBContext.cs" />
+    <Compile Include="EFContext\LoanDBContext.cs" />
     <Compile Include="EFContext\Mapping\CustomerMap.cs" />
     <Compile Include="EFContext\Mapping\LoanMap.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Loan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\GenericRepository.cs" />
-    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IRepositories\IGenericRepository.cs" />
+    <Compile Include="Repositories\LoanRepository.cs" />
+    <Compile Include="Repositories\IRepositories\ICustomerRepository.cs" />
+    <Compile Include="Repositories\IRepositories\ILoanRepository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
