--- a/LoanCalculator/LoanCalculator.DataAccessLayer/LoanCalculator.DataAccessLayer.csproj
+++ b/LoanCalculator/LoanCalculator.DataAccessLayer/LoanCalculator.DataAccessLayer.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
-    <Compile Include="Repositories\IRepositories\IGenericRepository.cs" />
+    <Compile Include="Repositories\IRepositories\IRepository.cs" />
     <Compile Include="Repositories\LoanRepository.cs" />
     <Compile Include="Repositories\IRepositories\ICustomerRepository.cs" />
     <Compile Include="Repositories\IRepositories\ILoanRepository.cs" />
